crates/pcbc/tests/snapshots/build__previous_line_suppress_multiple_patterns.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcbc build test.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Suppressed 2 warnings
✓ test.zen (0 components)
