crates/pcbc/tests/snapshots/build__previous_line_with_regular_comment.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcbc build test.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Suppressed 1 warning
✓ test.zen (0 components)
