crates/pcbc/tests/snapshots/build__suppress_all_errors_by_severity.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcbc build test.zen -S errors
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Suppressed 2 errors
✓ test.zen (0 components)
