crates/pcbc/tests/snapshots/build__suppress_all_warnings_by_severity.snap
---
source: crates/pcbc/tests/build.rs
expression: output
---
Command: pcbc build test.zen -S warnings
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Suppressed 4 warnings
✓ test.zen (0 components)
