crates/pcbc/tests/snapshots/build__suppress_by_exact_kind.snap
---
source: crates/pcbc/tests/build.rs
expression: output
---
Command: pcbc build test.zen -S electrical.voltage_mismatch
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Spacing violation
   ╭─[ <TEMP_DIR>/test.zen:3:1 ]
 3 │warn("Spacing violation", kind="layout.spacing")
   │                        ╰──────────────────────── Spacing violation

Warning: BOM missing part
   ╭─[ <TEMP_DIR>/test.zen:4:1 ]
 4 │warn("BOM missing part", kind="bom.missing_part")
   │                        ╰───────────────────────── BOM missing part

Warning: Regular warning without kind
   ╭─[ <TEMP_DIR>/test.zen:5:1 ]
 5 │warn("Regular warning without kind")
   │                  ╰────────────────── Regular warning without kind

Suppressed 1 warning
✓ test.zen (0 components)
