crates/pcbc/tests/snapshots/build__suppress_multiple_kinds.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcbc build test.zen -S electrical.voltage_mismatch -S layout.spacing
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: BOM missing part
   ╭─[ <TEMP_DIR>/test.zen:4:1 ]
 4 │warn("BOM missing part", kind="bom.missing_part")
   │                        ╰───────────────────────── BOM missing part

Warning: Regular warning without kind
   ╭─[ <TEMP_DIR>/test.zen:5:1 ]
 5 │warn("Regular warning without kind")
   │                  ╰────────────────── Regular warning without kind

Suppressed 2 warnings
✓ test.zen (0 components)
