crates/pcbc/tests/snapshots/build__suppressed_errors.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcbc build test.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Suppressed 2 errors
✓ test.zen (0 components)
