crates/pcbc/tests/snapshots/build__suppressed_warnings.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcbc build test.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Regular warning
   ╭─[ <TEMP_DIR>/test.zen:2:1 ]
 2 │warn("Regular warning")
   │           ╰──────────── Regular warning

Suppressed 2 warnings
✓ test.zen (0 components)
